# opensd

./: INSTALL.md  LICENSE  README.en.md  README.md  setup.cfg  tox.ini
ansible/: compute_extend.yml  gather-facts.yml  ironic.yml  nova.yml  opensd-host.yml  postchecks.yml  site.yml
ansible/group_vars/: all.yml  cell1.yml  cell2.yml  cell3.yml  cell4.yml  cell5.yml  compute-cell1-ironic.yml
ansible/inventory/: multinode
ansible/roles/bootstrap/defaults/: main.yml
ansible/roles/bootstrap/files/: pci_passthrough.py
ansible/roles/bootstrap/tasks/: bootstrap.yml  config_for_pass_through.yml  install.yml  main.yml  post-install.yml  pre-install.yml  vgpu_install.yml
ansible/roles/bootstrap/templates/: opensd_aarch64.repo.j2  opensd_x86_64.repo.j2
ansible/roles/ceph_client/defaults/: main.yml
ansible/roles/ceph_client/handlers/: main.yml
ansible/roles/ceph_client/tasks/: ceph_auth.yml  ceph_config.yml  ceph_install.yml  ceph_multi_az.yml  compute_extend.yml  deploy.yml
ansible/roles/ceph_client/tests/: test.yml
ansible/roles/ceph_client/vars/: main.yml
ansible/roles/chrony/handlers/: main.yml
ansible/roles/chrony/tasks/: config.yml  main.yml
ansible/roles/chrony/templates/: chrony.conf.j2
ansible/roles/cinder/defaults/: main.yml
ansible/roles/cinder/handlers/: main.yml
ansible/roles/cinder/tasks/: cinder_db_setup.yml  cinder_install.yml  compute_extend.yml  (+4 more)
ansible/roles/pacemaker/: README.md
etc/opensd/: globals.yml  passwords.yml
opensd/: __init__.py  version.py
opensd/cmd/: genpwd.py
tests/: test.yml
tools/: opensd  opensd-auto-ssh
(+241 files in other folders)
