[metadata]
name = opensd
summary = Ansible Deployment of opensd
description-file =
    README.md
author = OpenStack
home-page = https://pypi.org/project/opensd/
license = Mulan PSL v2
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Mulan PSL v2
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    opensd
data_files =
    share/opensd/ansible = ansible/*
    share/opensd/tools = tools/*
    share/opensd/doc = doc/*
    share/opensd/etc_examples = etc/*
    share/opensd = setup.cfg

scripts =
    tools/opensd
    tools/opensd-auto-ssh

[entry_points]
console_scripts =
    opensd-genpwd = opensd.cmd.genpwd:main
    opensd-mergepwd = opensd.cmd.mergepwd:main

[global]
setup-hooks =
    pbr.hooks.setup_hook

[build_releasenotes]
all_files = 1
build-dir = releasenotes/build
source-dir = releasenotes/source
